--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,29 +1,44 @@
+.mobile-nav {
+  display: none;
+}
+
+
+
+@media only screen and (max-width: 1024px) {
+ .mobile-nav {
+   display: block;
+   text-align: center;
+ }
+ .mobile-nav li {
+   padding-top: 0.75rem;
+   padding-bottom: 0.75rem;
+ }
+ .nav-items li {
+   display: none;
+ }
+}
+
+
+
 html {
   font-size: 18px;
+  background-color: white;
 }
 
 body {
-  background-color: black;
   color: seashell;
   font-family: Helvetica;
 }
 
 header {
-  display: flex;
-  align-items: center;
-  justify-content:flex-start;
-  height: 2.33rem;
-  max-width: 960px;
-  margin: 0px auto;
+  background-color: black;
 }
 
 .logo {
   display: flex;
   align-items: center;
-  margin: 0.66rem 0;
-  padding-top: 0.66rem;
-  padding-bottom: 0.66rem;
-  height: 2.33rem;
+  max-width: 960px;
+  margin: 0px auto;
 }
 
 header img {
@@ -45,6 +60,7 @@ header span {
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/moto.jpeg");
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: cover;
   height: 25rem;
   margin: 0px auto;
 }
@@ -89,4 +105,49 @@ nav {
 .nav-items li {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+
+
+.grid-container {
+  max-width: 960px;
+  margin: 0px auto;
+  display: block;
+}
+
+.product-grid {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  margin: 3rem 0px 0px 0px;
+}
+
+.product {
+  width: 30%;
+  display: block;
+}
+
+.product-image {
+  height: 9rem;
+  border: 4px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  overflow: hidden;
+
+}
+
+.product span {
+  background-color: black;
+  text-align: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  display: block;
+}
+
+.product-image img {
+  display: block;
+  max-width: 8rem;
 }
